Made fav star visible, made APIs call correct url

--- a/public/styles.css
+++ b/public/styles.css
@@ -587,7 +587,6 @@
 
     #ListingFavLinkContainer {
         text-align: center;
-        display: none;
     }
 
     #ListingFavContainer {
